--- a/tensorflow_io/ignite/BUILD
+++ b/tensorflow_io/ignite/BUILD
@@ -1,99 +1,12 @@
-package(default_visibility = ["//tensorflow:internal"])
-
 licenses(["notice"])  # Apache 2.0
 
-exports_files(["LICENSE"])
+package(default_visibility = ["//visibility:public"])
 
-load(
-    "//tensorflow:tensorflow.bzl",
-    "if_not_windows",
-    "if_windows",
-    "tf_custom_op_library",
-    "tf_custom_op_py_library",
-    "tf_gen_op_libs",
-    "tf_gen_op_wrapper_py",
-    "tf_kernel_library",
-    "tf_py_test",
-)
-
-py_library(
-    name = "ignite",
-    srcs = ["__init__.py"],
-    srcs_version = "PY2AND3",
-    deps = [
-        ":dataset_ops",
-        ":igfs_ops",
-    ],
-)
-
-tf_custom_op_library(
-    name = "_ignite_ops.so",
+cc_binary(
+    name = 'python/ops/_ignite_ops.so',
     srcs = [
-        "kernels/igfs/igfs.h",
         "ops/dataset_ops.cc",
         "ops/igfs_ops.cc",
-    ],
-    deps = [
-        ":dataset_kernels",
-        ":igfs_kernels",
-    ],
-)
-
-tf_gen_op_libs(
-    op_lib_names = ["dataset_ops"],
-)
-
-tf_gen_op_libs(
-    op_lib_names = ["igfs_ops"],
-    deps = [":igfs_kernels"],
-)
-
-cc_library(
-    name = "ignite_client",
-    srcs = [
-        "kernels/client/ignite_client.h",
-        "kernels/client/ignite_byte_swapper.h",
-        "kernels/client/ignite_plain_client.h",
-        "kernels/client/ignite_ssl_wrapper.h",
-        "kernels/client/ignite_ssl_wrapper.cc",
-    ] + if_not_windows([
-        "kernels/client/ignite_plain_client_unix.cc",
-    ]) + if_windows([
-        "kernels/client/ignite_plain_client_windows.cc",
-    ]),
-    copts = if_windows([
-        "-DWIN32_LEAN_AND_MEAN",
-    ]),
-    deps = [
-        "//tensorflow/core:framework_headers_lib",
-        "@boringssl//:ssl",
-        "@protobuf_archive//:protobuf_headers",
-    ],
-)
-
-cc_library(
-    name = "dataset_kernels",
-    srcs = [
-        "kernels/dataset/ignite_binary_object_parser.cc",
-        "kernels/dataset/ignite_binary_object_parser.h",
-        "kernels/dataset/ignite_dataset.cc",
-        "kernels/dataset/ignite_dataset.h",
-        "kernels/dataset/ignite_dataset_iterator.cc",
-        "kernels/dataset/ignite_dataset_iterator.h",
-        "kernels/dataset/ignite_dataset_ops.cc",
-    ],
-    deps = [
-        ":ignite_client",
-        "//tensorflow/core:framework_headers_lib",
-        "//third_party/eigen3",
-        "@protobuf_archive//:protobuf_headers",
-    ],
-    alwayslink = 1,
-)
-
-cc_library(
-    name = "igfs_kernels",
-    srcs = [
         "kernels/igfs/igfs.cc",
         "kernels/igfs/igfs.h",
         "kernels/igfs/igfs_client.cc",
@@ -106,99 +19,48 @@ cc_library(
         "kernels/igfs/igfs_random_access_file.h",
         "kernels/igfs/igfs_writable_file.cc",
         "kernels/igfs/igfs_writable_file.h",
+        "kernels/dataset/ignite_binary_object_parser.cc",
+        "kernels/dataset/ignite_binary_object_parser.h",
+        "kernels/dataset/ignite_dataset.cc",
+        "kernels/dataset/ignite_dataset.h",
+        "kernels/dataset/ignite_dataset_iterator.cc",
+        "kernels/dataset/ignite_dataset_iterator.h",
+        "kernels/dataset/ignite_dataset_ops.cc",
+        "kernels/client/ignite_client.h",
+        "kernels/client/ignite_byte_swapper.h",
+        "kernels/client/ignite_plain_client.h",
+        "kernels/client/ignite_ssl_wrapper.h",
+        "kernels/client/ignite_ssl_wrapper.cc",
+        "kernels/client/ignite_plain_client_unix.cc",
     ],
-    deps = [":ignite_client"],
-    alwayslink = 1,
+    linkshared = 1,
+    deps = [
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
+    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0"]
 )
 
 py_library(
-    name = "dataset_ops",
+    name = "dataset_ops_py",
     srcs = [
         "python/ops/ignite_dataset_ops.py",
     ],
-    srcs_version = "PY2AND3",
-    deps = [
-        ":ignite_op_loader",
-        "//tensorflow/python:dataset_ops_gen",
-        "//tensorflow/python:util",
-        "//tensorflow/python/data/ops:dataset_ops",
-        "//tensorflow/python/data/util:nest",
+    data = [
+        ":python/ops/_ignite_ops.so"
     ],
+    srcs_version = "PY2AND3",
 )
 
 py_library(
-    name = "igfs_ops",
+    name = "igfs_ops_py",
     srcs = [
         "python/ops/igfs_ops.py",
     ],
-    srcs_version = "PY2AND3",
-    deps = [
-        ":igfs_op_loader",
-        "//tensorflow/python:util",
-        "//tensorflow/python/data/util:nest",
-    ],
-)
-
-tf_gen_op_wrapper_py(
-    name = "gen_dataset_ops",
-    out = "python/ops/gen_dataset_ops.py",
-    deps = [":dataset_ops_op_lib"],
-)
-
-tf_gen_op_wrapper_py(
-    name = "gen_igfs_ops",
-    out = "python/ops/gen_igfs_ops.py",
-    deps = [":igfs_ops_op_lib"],
-)
-
-tf_kernel_library(
-    name = "dataset_ops_kernels",
-    deps = [
-        ":dataset_kernels",
-        "//tensorflow/core:framework",
-    ],
-    alwayslink = 1,
-)
-
-tf_kernel_library(
-    name = "igfs_ops_kernels",
-    deps = [
-        ":igfs_kernels",
-        "//tensorflow/core:framework",
-    ],
-    alwayslink = 1,
-)
-
-tf_custom_op_py_library(
-    name = "ignite_op_loader",
-    srcs = ["python/ops/ignite_op_loader.py"],
-    dso = [":_ignite_ops.so"],
-    kernels = [
-        ":dataset_ops_kernels",
-        ":dataset_ops_op_lib",
+    data = [
+        ":python/ops/_ignite_ops.so"
     ],
     srcs_version = "PY2AND3",
-    deps = [
-        ":gen_dataset_ops",
-        "//tensorflow/contrib/util:util_py",
-        "//tensorflow/python:platform",
-    ],
-)
-
-tf_custom_op_py_library(
-    name = "igfs_op_loader",
-    srcs = ["python/ops/igfs_op_loader.py"],
-    dso = [":_ignite_ops.so"],
-    kernels = [
-        ":igfs_ops_kernels",
-        ":igfs_ops_op_lib",
-    ],
-    srcs_version = "PY2AND3",
-    deps = [
-        ":gen_igfs_ops",
-        "//tensorflow/contrib/util:util_py",
-        "//tensorflow/python:platform",
-    ],
 )
 
 # The Apache Ignite servers have to setup before the test and tear down
@@ -209,22 +71,25 @@ tf_custom_op_py_library(
 #
 # To tear down Apache Ignite servers:
 # $ bash ./python/tests/stop_ignite.sh
-tf_py_test(
-    name = "ignite_test",
+py_test(
+    name = "ignite_py_test",
     srcs = [
-        "python/tests/igfs_test.py",
         "python/tests/ignite_dataset_test.py",
+        "python/tests/igfs_test.py",
     ],
-    additional_deps = [
-        ":ignite",
-        "//tensorflow/python:client_testlib",
-        "//tensorflow/python:framework",
-        "//tensorflow/python:framework_test_lib",
-        "//tensorflow/python:platform_test",
+    main = "python/tests/ignite_dataset_test.py",
+    deps = [
+        ":ignite_py",
     ],
-    tags = [
-        "manual",
-        "no_windows",
-        "notap",
+    srcs_version = "PY2AND3",
+)
+
+py_library(
+    name = "ignite_py",
+    srcs = ["__init__.py"],
+    deps = [
+        ":dataset_ops_py",
+        ":igfs_ops_py",
     ],
+    srcs_version = "PY2AND3",
 )
