--- a/tensorflow_io/ignite/BUILD
+++ b/tensorflow_io/ignite/BUILD
@@ -37,6 +37,7 @@ cc_binary(
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
+        "@boringssl//:ssl",
     ],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
