Add "-DNDEBUG" to kinesis implementation
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/kinesis/BUILD
+++ b/tensorflow_io/kinesis/BUILD
@@ -15,7 +15,7 @@ cc_binary(
         "@curl//:curl",
         "@aws//:aws",
     ],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0"]
+    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
 
 py_library(
