--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -5,6 +5,7 @@ export(install_tensorflow)
 export(tf)
 export(tf_config)
 import(rlang)
+import(tfdatasets)
 import(tidyselect)
 importFrom(magrittr,"%>%")
 importFrom(reticulate,import)
