Enhancement with Travis CI configurations and disables //tensorflow_io/ignite:ignite_py_test
This fix updates Travis CI configurations by
removing redudant .travis/python.test.sh and calling
for bazel directly. A stub kinesis has been created
so that kinesis ops could be built on Travis CI
(testing against kinesis could be done manually)

This fix also disabled:
//tensorflow_io/ignite:ignite_py_test

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,28 +20,28 @@ matrix:
       before_install:
         - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
       script:
-        - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.test.sh
+        - bazel test -s --verbose_failures -- //tensorflow_io/... -//tensorflow_io/ignite:ignite_py_test
     - language: python
       python:
         - 3.4
       before_install:
         - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
       script:
-        - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.test.sh
+        - bazel test -s --verbose_failures -- //tensorflow_io/... -//tensorflow_io/ignite:ignite_py_test
     - language: python
       python:
         - 3.5
       before_install:
         - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
       script:
-        - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.test.sh
+        - bazel test -s --verbose_failures -- //tensorflow_io/... -//tensorflow_io/ignite:ignite_py_test
     - language: python
       python:
         - 3.6
       before_install:
         - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
       script:
-        - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.test.sh
+        - bazel test -s --verbose_failures -- //tensorflow_io/... -//tensorflow_io/ignite:ignite_py_test
     - language: r
       before_install:
         - cd R-package
