Explicitly testing 3.2 and 3.5 R versions on Travis
This should be good for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,15 @@ matrix:
       script:
         - bazel test -s --verbose_failures -- //tensorflow_io/... -//tensorflow_io/ignite:ignite_py_test
     - language: r
+      r:
+        - 3.2
+      before_install:
+        - cd R-package
+      script:
+        - R -e "devtools::test()"
+    - language: r
+      r:
+        - 3.5
       before_install:
         - cd R-package
       script:
