--- a/tensorflow_io/video/BUILD
+++ b/tensorflow_io/video/BUILD
@@ -43,6 +43,24 @@ cc_binary(
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
 
+cc_binary(
+    name = 'python/ops/_video_ops_libav_9.20.so',
+    srcs = [
+        "kernels/libav_9_20.cc",
+        "kernels/video_reader.h",
+        "kernels/video_dataset_ops.cc",
+        "ops/dataset_ops.cc",
+    ],
+    includes = ["."],
+    linkshared = 1,
+    deps = [
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+	"@libav_9_20//:libav",
+    ],
+    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
+)
+
 py_library(
     name = "video_ops_py",
     srcs = ([
@@ -51,6 +69,7 @@ py_library(
     data = [
         ":python/ops/_video_ops_ffmpeg_3.4.so",
         ":python/ops/_video_ops_ffmpeg_2.8.so",
+        ":python/ops/_video_ops_libav_9.20.so",
     ],
     srcs_version = "PY2AND3",
 )
