--- a/tensorflow_io/parquet/BUILD
+++ b/tensorflow_io/parquet/BUILD
@@ -17,7 +17,7 @@ cc_binary(
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
-        "@parquet//:parquet",
+        "@arrow//:arrow",
     ],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
