--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -24,6 +24,7 @@ export(install_tensorflow)
 export(kafka_dataset)
 export(kinesis_dataset)
 export(next_batch)
+export(parquet_dataset)
 export(sequence_file_dataset)
 export(tf)
 export(tf_config)
