Configure and install Python deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ matrix:
       r:
         - 3.2
       before_install:
+        - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
+        - pip install pyarrow==0.11.1
         - cd R-package
       script:
         - R -e "devtools::test()"
@@ -56,6 +58,8 @@ matrix:
       r:
         - 3.5
       before_install:
+        - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
+        - pip install pyarrow==0.11.1
         - cd R-package
       script:
         - R -e "devtools::test()"
