--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -30,6 +30,7 @@ export(tf)
 export(tf_config)
 export(tf_version)
 export(until_out_of_range)
+export(webp_dataset)
 export(with_dataset)
 import(forge)
 import(tfdatasets)
