--- a/.travis.yml
+++ b/.travis.yml
@@ -48,13 +48,15 @@ matrix:
     - language: r
       r:
         - 3.5
+      cache:
+        packages: true
+        directories:
+          - $HOME/.cache/pip
       before_install:
         - bash -x ${TRAVIS_BUILD_DIR}/.travis/python.configure.sh
         - pip install --upgrade --ignore-installed --user travis tensorflow-io pyarrow==0.11.1
         - echo "options(repos = c(CRAN='http://cran.rstudio.com'))" >> ~/.Rprofile
         - cd R-package
-      script:
-        - R -e "devtools::test()"
 
 notifications:
   email: false
