--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -24,6 +24,7 @@ export(install_tensorflow)
 export(kafka_dataset)
 export(kinesis_dataset)
 export(next_batch)
+export(output_types)
 export(parquet_dataset)
 export(sequence_file_dataset)
 export(tf)
@@ -63,5 +64,6 @@ importFrom(tfdatasets,dataset_shuffle_and_repeat)
 importFrom(tfdatasets,dataset_skip)
 importFrom(tfdatasets,dataset_take)
 importFrom(tfdatasets,next_batch)
+importFrom(tfdatasets,output_types)
 importFrom(tfdatasets,until_out_of_range)
 importFrom(tfdatasets,with_dataset)
