Reexports iterators methods

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -21,9 +21,18 @@ export(dataset_skip)
 export(dataset_take)
 export(ignite_dataset)
 export(install_tensorflow)
+export(iterator_get_next)
+export(iterator_initializer)
+export(iterator_make_initializer)
+export(iterator_string_handle)
 export(kafka_dataset)
 export(kinesis_dataset)
+export(make_iterator_from_string_handle)
+export(make_iterator_from_structure)
+export(make_iterator_initializable)
+export(make_iterator_one_shot)
 export(next_batch)
+export(out_of_range_handler)
 export(output_types)
 export(parquet_dataset)
 export(sequence_file_dataset)
@@ -63,7 +72,16 @@ importFrom(tfdatasets,dataset_shuffle)
 importFrom(tfdatasets,dataset_shuffle_and_repeat)
 importFrom(tfdatasets,dataset_skip)
 importFrom(tfdatasets,dataset_take)
+importFrom(tfdatasets,iterator_get_next)
+importFrom(tfdatasets,iterator_initializer)
+importFrom(tfdatasets,iterator_make_initializer)
+importFrom(tfdatasets,iterator_string_handle)
+importFrom(tfdatasets,make_iterator_from_string_handle)
+importFrom(tfdatasets,make_iterator_from_structure)
+importFrom(tfdatasets,make_iterator_initializable)
+importFrom(tfdatasets,make_iterator_one_shot)
 importFrom(tfdatasets,next_batch)
+importFrom(tfdatasets,out_of_range_handler)
 importFrom(tfdatasets,output_types)
 importFrom(tfdatasets,until_out_of_range)
 importFrom(tfdatasets,with_dataset)
