Added support for video_dataset and update docs

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -40,6 +40,7 @@ export(tf)
 export(tf_config)
 export(tf_version)
 export(until_out_of_range)
+export(video_dataset)
 export(webp_dataset)
 export(with_dataset)
 import(forge)
