Update ffmpeg bazel rules
This fix updates ffmpeg bazel rules. The issue was that,
genrule (previously used) does not guarantee the files will
be generated from invoking native.cc_library. That means
occasionally `bazel build build_pip_pkg` does not work.

This fix add those stub .so files directly to avoid missing
.so files when invoking `bazel build build_pip_pkg`

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/video/BUILD
+++ b/tensorflow_io/video/BUILD
@@ -7,6 +7,13 @@ filegroup(
     srcs = glob(["python/kernel_tests/testdata/*"]),
 )
 
+# Note: stub files are generated from Ubuntu 14.0 with
+# `echo '' | g++ -shared -fPIC -x c++ - -o $@`
+filegroup(
+    name = "stub.so",
+    srcs = glob(["kernel/stub/*"]),
+)
+
 cc_binary(
     name = 'python/ops/_video_ops_ffmpeg_3.4.so',
     srcs = [
@@ -17,10 +24,20 @@ cc_binary(
     ],
     includes = ["."],
     linkshared = 1,
+    linkopts = [
+        "-Ltensorflow_io/video/kernels/stub",
+        "-l:libavformat.so.57",
+        "-l:libavcodec.so.57",
+        "-l:libavutil.so.55",
+        "-l:libswscale.so.4",
+    ],
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
 	"@ffmpeg_3_4//:ffmpeg",
+    ],
+    data = [
+        ":stub.so",
     ],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
@@ -35,10 +52,20 @@ cc_binary(
     ],
     includes = ["."],
     linkshared = 1,
+    linkopts = [
+        "-Ltensorflow_io/video/kernels/stub",
+	"-l:libavformat-ffmpeg.so.56",
+	"-l:libavcodec-ffmpeg.so.56",
+	"-l:libavutil-ffmpeg.so.54",
+	"-l:libswscale-ffmpeg.so.3",
+    ],
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
 	"@ffmpeg_2_8//:ffmpeg",
+    ],
+    data = [
+        ":stub.so",
     ],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
@@ -53,10 +80,20 @@ cc_binary(
     ],
     includes = ["."],
     linkshared = 1,
+    linkopts = [
+        "-Ltensorflow_io/video/kernels/stub",
+	"-l:libavformat.so.54",
+	"-l:libavcodec.so.54",
+	"-l:libavutil.so.52",
+	"-l:libswscale.so.2",
+    ],
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
 	"@libav_9_20//:libav",
+    ],
+    data = [
+        ":stub.so",
     ],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
