Add from_schema() s3 method for arrow datasets

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -21,6 +21,8 @@ export(dataset_shuffle)
 export(dataset_shuffle_and_repeat)
 export(dataset_skip)
 export(dataset_take)
+export(from_schema.tensorflow_io.arrow.python.ops.arrow_dataset_ops.ArrowFeatherDataset)
+export(from_schema.tensorflow_io.arrow.python.ops.arrow_dataset_ops.ArrowStreamDataset)
 export(ignite_dataset)
 export(install_tensorflow)
 export(iterator_get_next)
