--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,18 @@ matrix:
         - docker pull ubuntu:18.04
         - docker run -i -t -e BAZEL_VERSION=$BAZEL_VERSION --rm -v ${PWD}:/working_dir -w /working_dir  tensorflow/tensorflow:custom-op bash -x /working_dir/.travis/python.release.sh 3.6
         - docker run -i -t -e --rm -v $PWD:/workspace -w /workspace --net=host ubuntu:18.04 bash -x -c "apt-get -y -qqq update && apt-get -y -qqq install python3-pip && pip3 install artifacts/tensorflow_io-*-cp36-*.whl"
+    - name: "Ubuntu 16.04 R 3.5 (Python 2.7) Build Tests"
+      script:
+        - docker pull tensorflow/tensorflow:custom-op
+        - docker pull ubuntu:16.04
+        - docker run -i -t -e BAZEL_VERSION=$BAZEL_VERSION --rm -v ${PWD}:/working_dir -w /working_dir  tensorflow/tensorflow:custom-op bash -x /working_dir/.travis/python.release.sh 2.7
+        - docker run -i -t -e --rm -v $PWD:/workspace -w /workspace --net=host ubuntu:16.04 bash -x -c ".travis/r.configure.sh &&  apt-get -y -qqq install python-pip && pip install artifacts/tensorflow_io-*-cp27-*.whl && cd R-package && R -e 'devtools::test()'"
+    - name: "Ubuntu 18.04 R 3.5 (Python 2.7) Build Tests"
+      script:
+        - docker pull tensorflow/tensorflow:custom-op
+        - docker pull ubuntu:18.04
+        - docker run -i -t -e BAZEL_VERSION=$BAZEL_VERSION --rm -v ${PWD}:/working_dir -w /working_dir  tensorflow/tensorflow:custom-op bash -x /working_dir/.travis/python.release.sh 2.7
+        - docker run -i -t -e --rm -v $PWD:/workspace -w /workspace --net=host ubuntu:18.04 bash -x -c ".travis/r.configure.sh &&  apt-get -y -qqq install python-pip && pip install artifacts/tensorflow_io-*-cp27-*.whl && cd R-package && R -e 'devtools::test()'"
 
 notifications:
   email: false
